--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -98,21 +98,21 @@
                         </h2>
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
-                    <!-- <div class="w-full mt-20">
+                    <div class="w-full mt-20">
                         <div class="w-full flex justify-evenly lg:justify-between">
                             <div class="w-[30%] rounded-xl border-primary border-4 ">
-                                <p class="text-base font-bold text-center">Sondaggi vinti: 3</p>
+                                <p class="text-base font-bold text-center bg-blue-400">Sondaggi vinti: 3</p>
                             </div>
                             <div class="w-[30%] rounded-xl border-primary border-4 ">
-                                <p class="text-base font-bold text-center">Sondaggi persi: 2</p>    
+                                <p class="text-base font-bold text-center bg-red-300">Sondaggi persi: 2</p>    
                             </div>
                         </div>
-                        <div class="w-full flex justify-center">
-                            <app-pie-chart></app-pie-chart>
+                        <div class="w-full flex justify-center mt-5">
+                                <img class="object-contain" src="../../../assets/Grafico risposte.png" alt="">
                         </div>
                         
-                    </div> -->
-                    <div class="w-full mt-20">
+                    </div>
+                    <div class="w-full mt-10">
                         <table class="w-full">
                             <thead class="w-full bg-primary text-white">
                                 <tr class="w-full border-primary lg:border-4 border-b-4 h-12">
