--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -170,7 +170,7 @@
                 <form action="" class="flex items-center justify-end ">
                     <input type="text" placeholder="cerca" class="rounded-full text-center lg:flex items-center mr-2 hidden">
                     <button class="h-16 lg:w-[10%] w-[50%]">
-                        <img src="./assets/icon/lente-arancione-1.png" alt="" class="object-contain w-auto">
+                        <!-- <img src="./assets/icon/lente-arancione-1.png" alt="" class="object-contain w-auto"> -->
                     </button>
                 </form>
             </div>
