--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -35,7 +35,7 @@
                     <ul class="flex flex-col justify-center cursor-pointer m-4">
                         <li> <a target="_blank" href="https://www.instagram.com/slamstats_official/">Instagram</a></li>
                         <li> <a target="_blank" href="https://www.facebook.com/people/slamstatsofficial/61555487793332/?locale=it_IT">Facebook</a></li>
-                        <li [routerLink]="['/']">X</li>
+                        <li> <a target="_blank" href="'/https://twitter.com/StatsSlam28845'">X</a></li>
                     </ul>
                 </div>
                 <div class="hidden md:w-1/4 md:flex flex-col justify-center items-center pb-5 h-full">
